# mtct

./: .clang-tidy  .cmake-format.yaml  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md  cmake.sh  debug_build.sh  flake.nix  launch_measure.sh  requirements.txt
apps/: CMakeLists.txt  gen_po_moving_block_astar_testing.cpp  gen_po_moving_block_lazy_testing.cpp  gen_po_moving_block_lazy_vss_gen_testing.cpp  gen_po_moving_block_simplified_testing.cpp  gen_po_moving_block_simplified_vss_gen_testing.cpp  main.cpp  temporary.cpp  vss_generation_timetable_iterative_parameter_testing.cpp  vss_generation_timetable_mip.cpp  vss_generation_timetable_mip_inferred_testing.cpp  vss_generation_timetable_mip_iterative_vss_testing.cpp  vss_generation_timetable_mip_testing.cpp  vss_generation_timetable_simulator.cpp  vss_generation_timetable_simulator_genetic_parameter_testing.cpp  vss_generation_timetable_simulator_greedy_parameter_testing.cpp  vss_generation_timetable_simulator_local_parameter_testing.cpp  vss_generation_timetable_simulator_measurement.cpp  vss_generation_timetable_simulator_search_methods_testing.cpp  vss_generation_timetable_using_mb_information_testing.cpp
src/: CMakeLists.txt  EOMHelper.cpp  GeneralHelper.cpp  MultiArray.cpp  RailwayNetwork.cpp  Station.cpp  StringHelper.cpp  Timetable.cpp  Train.cpp  main.cpp
src/datastructure/: RailwayNetwork.cpp  RailwayNetwork_helper.cpp  Route.cpp  Station.cpp  Timetable.cpp  Train.cpp
src/parsing/: tinyxml2.cpp
src/probleminstances/: GeneralPerformanceOptimizationInstance.cpp  SolGeneralPerformanceOptimizationInstance.cpp  SolVSSGenerationTimetable.cpp  VSSGenerationTimetable.cpp
src/simulation/: EdgeTrajectory.cpp  Objectives.cpp  RoutingSolution.cpp  RoutingSolutionSet.cpp  RoutingSolver.cpp  SimulationInstance.cpp  SolverResult.cpp  SpeedTargets.cpp  TrainTrajectory.cpp  TrainTrajectorySet.cpp
src/simulator/: GreedyHeuristic.cpp  GreedySimulator.cpp
src/solver/astar-based/: GenPOMovingBlockAStarSolver.cpp
src/solver/mip-based/: GenPOMovingBlockMIPSolver.cpp  GenPOMovingBlockMIPSolver_Lazy.cpp  GenPOMovingBlockMIPSolver_SolutionExtraction.cpp  VSSGenTimetableSolver.cpp  VSSGenTimetableSolver_MovingBlockInformation.cpp  VSSGenTimetableSolver_fixedRoutes.cpp  VSSGenTimetableSolver_freeRoutes.cpp  VSSGenTimetableSolver_general.cpp  VSSGenTimetableSolver_helper.cpp  VSSGenerationTimetable.cpp
src/xml/: tinyxml2.cpp
test/: CMakeLists.txt  convertToBidirec.py  convertToUnidirec.py  plotSpeeds.py  plotTrajectory.py  test_abstract_data_structure.cpp  test_custom_exceptions.cpp  test_eom.cpp  test_gen_po_movingblock_mip_solver.cpp  test_general_helper.cpp  test_general_performance_optimization_instances.cpp  test_greedyheuristic.cpp  test_greedysimulator.cpp  test_gurobi.cpp  test_gurobi_vss_gen.cpp  test_gurobi_vss_gen_using_mb_information.cpp  test_helper.cpp  test_mb_astar.cpp  test_multiarray.cpp  test_plog.cpp  test_probleminstances.cpp  test_railwaynetwork.cpp  test_simulation.cpp  test_simulation_data.cpp  test_station.cpp  test_temporary_create_ras_instances.cpp  test_trainlist.cpp
test/example-networks-gen-po-ras/practical/: problem_data.json
test/example-networks-gen-po-ras/toy/: problem_data.json
test/example-networks-gen-po/GeneralSimpleNetwork10Trains/: problem_data.json
test/example-networks-gen-po/GeneralSimpleNetwork15Trains/: problem_data.json
test/example-networks-gen-po/GeneralSimpleNetwork20Trains/: problem_data.json
test/example-networks-gen-po/GeneralSimpleNetwork25Trains/: problem_data.json
test/example-networks-gen-po/GeneralSimpleNetwork30Trains/: problem_data.json
test/example-networks-gen-po/GeneralSimpleNetwork35Trains/: problem_data.json
test/example-networks-gen-po/GeneralSimpleNetwork40Trains/: problem_data.json
test/example-networks-gen-po/GeneralSimpleNetwork45Trains/: problem_data.json
test/example-networks-gen-po/GeneralSimpleNetwork50Trains/: problem_data.json
test/example-networks-gen-po/GeneralSimpleNetwork5Trains/: problem_data.json
test/example-networks-gen-po/GeneralSimpleNetworkB12Trains/: problem_data.json
test/example-networks-gen-po/GeneralSimpleNetworkB15Trains/: problem_data.json
test/example-networks-gen-po/GeneralSimpleNetworkB18Trains/: problem_data.json
test/example-networks-gen-po/GeneralSimpleNetworkB21Trains/: problem_data.json
test/example-networks-gen-po/GeneralSimpleNetworkB24Trains/: problem_data.json
test/example-networks-gen-po/GeneralSimpleNetworkB27Trains/: problem_data.json
test/example-networks-gen-po/GeneralSimpleNetworkB30Trains/: problem_data.json
test/example-networks-gen-po/GeneralSimpleNetworkB3Trains/: problem_data.json
test/example-networks-gen-po/GeneralSimpleNetworkB6Trains/: problem_data.json
test/example-networks-gen-po/GeneralSimpleNetworkB9Trains/: problem_data.json
test/example-networks-gen-po/GeneralStammstrecke10TrainsDifferentEntries/: problem_data.json
test/example-networks-gen-po/GeneralStammstrecke11Trains/: problem_data.json
test/example-networks-gen-po/GeneralStammstrecke11TrainsDifferentEntries/: problem_data.json
test/example-networks-gen-po/GeneralStammstrecke12Trains/: problem_data.json
test/example-networks-gen-po/GeneralStammstrecke12TrainsDifferentEntries/: problem_data.json
test/example-networks-gen-po/GeneralStammstrecke13Trains/: problem_data.json
test/example-networks-gen-po/GeneralStammstrecke13TrainsDifferentEntries/: problem_data.json
test/example-networks-gen-po/GeneralStammstrecke14TrainsDifferentEntries/: problem_data.json
test/example-networks-gen-po/GeneralStammstrecke15TrainsDifferentEntries/: problem_data.json
test/example-networks-gen-po/GeneralStammstrecke16Trains/: problem_data.json
test/example-networks-gen-po/GeneralStammstrecke16TrainsDifferentEntries/: problem_data.json
test/example-networks-gen-po/GeneralStammstrecke18Trains/: problem_data.json
test/example-networks-sim-bidirec/: readme.md
test/example-networks-sim-unidirec/: readme.md
test/old-parsing-scripts/: RAS.txt  parsing-script.txt  ras_parsing.txt
(+699 files in other folders)
